--- a/ContactApp/src/sample/main.fxml
+++ b/ContactApp/src/sample/main.fxml
@@ -17,6 +17,9 @@
                     <items>
                         <MenuItem text="Edit" onAction="#showEditContactDialog"/>
                     </items>
+                    <items>
+                        <MenuItem text="Delete" onAction="#showDeleteDialog"/>
+                    </items>
                 </Menu>
             </menus>
         </MenuBar>
@@ -24,8 +27,11 @@
 
     <center>
         <TableView fx:id="contactsTable">
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
             <columns>
-                <TableColumn text="First name">
+                <TableColumn text="Fir st name">
                     <cellValueFactory>
                         <PropertyValueFactory property="firstName" />
                     </cellValueFactory>
